--- a/app/new-tab.html
+++ b/app/new-tab.html
@@ -33,6 +33,7 @@
 	    <div class="container-fluid">
 		  <div class="row">
 		   <div class="col-md-6 col-sm-6 col-xs-12">
+		    <h1>Add New Plot</h1>
 			<form method="post" id='tab_form'>
 			 <div class="form-group ">
 			  <label class="control-label requiredField" for="name">
@@ -43,7 +44,7 @@
 			  </label>
 			  <input class="form-control" id="name" name="name" type="text"/>
 			  <span class="help-block" id="hint_name">
-			   Ideally three to four letter letter project identifier, example ILS, GNH, WALE etc.
+			   Ideally three to five letter short project identifier, example ILS, GNH, WALE etc.
 			  </span>
 			 </div>
 			 <div class="form-group ">
@@ -61,7 +62,7 @@
 			 <div class="form-group">
 			  <div>
 			   <button class="btn btn-primary " name="submit" type="submit">
-				Submit
+				Save
 			   </button>
 			  </div>
 			 </div>
