--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,9 @@
 			height:100%;
 			
 		}
+		body {
+			font: caption;
+		  }
 	</style>
     <!-- Javascript -->
 	<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
